--- a/FieldTest.tex
+++ b/FieldTest.tex
@@ -1,6 +1,7 @@
 \chapter{Field Test}
 
 In order to test the rover's ability to localize itself, a simple field test was conducted in a parking lot. Inspiration for this experiment comes from Moore and Stouch \cite{robot_localization_paper}.
+% An attempt was made to replicate the results in paper
 
 \section{Experiment Design}
 
